--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.main.allow-circular-references=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=embedded
+spring.sql.init.mode=always
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
@@ -11,13 +11,13 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.org.zalando=TRACE
 #---
 # TODO Append connection to DB
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:/db/share-it
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/share-it
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 #---
 spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
