--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.datasource.password=12345
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=test
 spring.datasource.password=test
