--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.main.allow-circular-references=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 logging.level.org.springframework.orm.jpa=INFO
@@ -17,7 +16,7 @@ spring.datasource.username=dbuser
 spring.datasource.password=12345
 #---
 spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
