Add: item request to item mapper and item, crud to item request

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -24,3 +24,5 @@ errors.400.bookings.unavailable=Бронирование занято
 errors.400.bookings.not_allowed=У вас нет доступа
 # COMMENTS
 errors.400.comments.not_allowed=Нет доступа к комментарий
+# REQUEST
+errors.404.requests=Запрос не найден
