--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9090
 spring.main.allow-circular-references=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 #logging.level.org.springframework.orm.jpa=INFO
 #logging.level.org.springframework.transaction=INFO
 #logging.level.org.springframework.transaction.interceptor=TRACE
